# rncp-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.gradio/flagged/: dataset1.csv
data/: desktop.ini  rncp.md
src/: app.py  ingest.py  retriever.py
